feat(vxlan-bridge): :sparkles: api endpoint for retrieve vxlan bridge status
